# ping-pong-sfml

./: CMakeLists.txt  README.md  main.cpp
include/Core/: GameLoop.h  GameWindowManager.h
include/Event/: EventManager.h
include/Gameplay/: Ball.h  Boundary.h  GameplayManager.h  Paddle.h
include/Sound/: SoundManager.h
include/UI/: UIService.h
include/Utility/: TimeService.h
include/core/: GameWindowManager.h
src/: main.cpp
src/Core/: GameLoop.cpp  GameWindowManager.cpp
src/Event/: EventManager.cpp
src/Gameplay/: Ball.cpp  Boundary.cpp  GameplayManager.cpp  Paddle.cpp
src/Sound/: SoundManager.cpp
src/UI/: UIService.cpp
src/Utility/: TimeService.cpp
src/core/: GameWindowManager.cpp
